# flask-sqlinjection-vulnerable

./: .gitignore  .gitpod.Dockerfile  .gitpod.yaml  .gitpod.yml  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  thunder-client-1.9.1.vsix
data/: test.db
src/: db.py  db_commands.py  flask_app.py  main.py  models.py
