[tool.poetry]
name = "flask-sqlinjection"
version = "0.1.0"
description = ""
authors = ["Guilherme Latrova <hello@guilatrova.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
rich = "^10.11.0"

[tool.poetry.dev-dependencies]
tryceratops = "^0.6.0"
black = "^21.9b0"
flake8 = "^3.9.2"
isort = "^5.9.3"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
